// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextArea" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <textarea
    className="textarea css-1lmm8uy"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as disabled 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <textarea
    className="textarea css-1lu21pm"
    disabled={true}
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as invalid 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <textarea
    className="textarea css-1xpn2km"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders with placeholderTextTransform 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <textarea
    className="textarea css-v6j4u8"
    placeholder="TextArea"
  >
    TextArea
  </textarea>
</div>
`;
